--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
               </div>
               <div class="card-text video-wrap">
                 <video id="video" class="video"></video>
-                <img src="">
+                <img src="" />
                 <canvas id="canvas" class="canvas"></canvas><br />
               </div>
               <button id="snap" onclick="snap();" class="card-btn">拍照</button>
@@ -64,8 +64,7 @@
             <div class="card-body">
               <h5 class="card-title">學生資料</h5>
               <div class="card-text table-group">
-                <form action="./face_detection.py/reg" onsubmit="return false" method="POST">
-                  <input
+                <input
                   class="form-control form-control-lg m-2 student-input"
                   type="text"
                   placeholder="姓名"
@@ -97,22 +96,25 @@
                   class="form-control form-control-lg m-2 student-input"
                   aria-label=".form-control-lg example"
                   name="gender"
-                  style="color:#989898"
+                  style="color: #989898"
                 >
-                <option disabled="disabled" selected="selected">性別</option> 
-                  <option value="Male
-                  ">男</option>
+                  <option disabled="disabled" selected="selected">性別</option>
+                  <option value="Male">男</option>
                   <option value="Women">女</option>
-              </select>
+                </select>
               </div>
               <button class="card-btn" id="register">註冊</button>
-            </form>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>    <script
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
