--- a/register.html
+++ b/register.html
@@ -74,13 +74,6 @@
                 <input
                   class="form-control form-control-lg m-2 student-input"
                   type="text"
-                  placeholder="帳號ID"
-                  aria-label=".form-control-lg example"
-                  name="account_id"
-                />
-                <input
-                  class="form-control form-control-lg m-2 student-input"
-                  type="text"
                   placeholder="學號"
                   aria-label=".form-control-lg example"
                   name="u_id"
@@ -104,6 +97,9 @@
                 </select>
               </div>
               <button class="card-btn" id="register">註冊</button>
+            </div>
+            <div id="alert" class="alert alert-warning d-none" role="alert">
+              This is a warning alert—check it out!
             </div>
           </div>
         </div>
