--- a/login.html
+++ b/login.html
@@ -60,6 +60,9 @@
               </div>
               <button class="card-btn" id="login">登入</button>
             </div>
+            <div id="alert" class="alert alert-warning d-none" role="alert">
+              This is a warning alert—check it out!
+            </div>
           </div>
         </div>
       </div>
