--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">亞洲大學圖書館</a>
+          <a class="navbar-brand" href="./faceIdentify.html">亞洲大學圖書館</a>
           <i class="fas fa-home"></i>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
