--- a/faceIdentify.html
+++ b/faceIdentify.html
@@ -31,10 +31,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"></a>
+                <a class="nav-link" href="register.html">人臉註冊</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"></a>
+                <a class="nav-link" href="faceIdentify.html">辨識</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./borrowBooks.html">借書</a>
               </li>
             </ul>
           </div>
@@ -44,60 +47,14 @@
     </header>
     <div class="container-fluid mt-2">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <div class="card-title">
-                <h5>人臉識別</h5>
-              </div>
+              <div class="card-title"></div>
               <div class="card-text video-wrap">
                 <video id="video" class="video"></video>
                 <img src="" />
                 <canvas id="canvas" class="canvas"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">學生資料</h5>
-              <div class="card-text table-group">
-                <input
-                  class="form-control form-control-lg m-2 student-input"
-                  type="text"
-                  placeholder="姓名"
-                  aria-label=".form-control-lg example"
-                  name="name"
-                  disabled="disabled"
-                />
-                <input
-                  class="form-control form-control-lg m-2 student-input"
-                  type="text"
-                  placeholder="學號"
-                  aria-label=".form-control-lg example"
-                  name="u_id"
-                  disabled="disabled"
-                />
-                <input
-                  class="form-control form-control-lg m-2 student-input"
-                  type="text"
-                  placeholder="系所"
-                  aria-label=".form-control-lg example"
-                  name="myclass"
-                  disabled="disabled"
-                />
-                <select
-                  class="form-control form-control-lg m-2 student-input"
-                  aria-label=".form-control-lg example"
-                  name="gender"
-                  style="color: #989898"
-                  disabled="disabled"
-                >
-                  <option disabled="disabled" selected="selected">性別</option>
-                  <option value="Male">男</option>
-                  <option value="Women">女</option>
-                </select>
               </div>
               <div id="alert" class="alert alert-warning d-none" role="alert">
                 This is a warning alert—check it out!
