--- a/register.html
+++ b/register.html
@@ -31,10 +31,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"></a>
+                <a class="nav-link" href="register.html">人臉註冊</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"></a>
+                <a class="nav-link" href="faceIdentify.html">辨識</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./borrowBooks.html">借書</a>
               </li>
             </ul>
           </div>
@@ -50,12 +53,12 @@
               <div class="card-title">
                 <h5>人臉識別</h5>
               </div>
-              <div class="card-text video-wrap">
+              <div class="card-text video-wrap d-flex">
                 <video id="video" class="video"></video>
                 <img src="" />
-                <canvas id="canvas" class="canvas"></canvas><br />
+                <canvas id="canvas" class="canvas"></canvas>
               </div>
-              <button id="snap" onclick="snap();" class="card-btn">拍照</button>
+              <button id="snap" onclick="snap();" class="card-btn mt-1">拍照</button>
             </div>
           </div>
         </div>
