--- a/borrowBooks.html
+++ b/borrowBooks.html
@@ -58,6 +58,7 @@
                 <img src="" />
                 <canvas id="canvas" class="canvas"></canvas>
               </div>
+              <div id="camera_status" class="alert alert-warning d-none" role="alert"></div>
             </div>
           </div>
         </div>
@@ -66,6 +67,7 @@
             <div class="card-body">
               <h5 class="card-title">學生資料</h5>
               <div class="card-text table-group">
+                <img src="" alt="" />
                 <input
                   class="form-control form-control-lg m-2 student-input"
                   type="text"
@@ -120,6 +122,6 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <script src="./faceIdentify.js"></script>
+    <script src="./borrowBooks.js"></script>
   </body>
 </html>
