--- a/faceIdentify.html
+++ b/faceIdentify.html
@@ -56,6 +56,7 @@
                 <img src="" />
                 <canvas id="canvas" class="canvas"></canvas>
               </div>
+              <div id="camera_status" class="alert alert-warning d-none" role="alert"></div>
               <div id="alert" class="alert alert-warning d-none" role="alert">
                 This is a warning alert—check it out!
               </div>
