--- a/faceIdentify.html
+++ b/faceIdentify.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>人臉辨識</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -56,10 +56,8 @@
                 <img src="" />
                 <canvas id="canvas" class="canvas"></canvas>
               </div>
-              <div id="camera_status" class="alert alert-warning d-none" role="alert"></div>
-              <div id="alert" class="alert alert-warning d-none" role="alert">
-                This is a warning alert—check it out!
-              </div>
+              <div id="camera_status" class="alert alert-warning" role="alert"></div>
+              <div id="alert" class="alert alert-danger d-none" role="alert"></div>
             </div>
           </div>
         </div>
