--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>人臉註冊</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -66,7 +66,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">學生資料</h5>
-              <div class="card-text table-group">
+              <div class="card-text table-group align-items-center">
+                <img id="img" alt="" style="width: 200px; height: 200px; border: black" />
                 <input
                   class="form-control form-control-lg m-2 student-input"
                   type="text"
@@ -91,6 +92,16 @@
                 <select
                   class="form-control form-control-lg m-2 student-input"
                   aria-label=".form-control-lg example"
+                  name="staff"
+                  style="color: #989898"
+                >
+                  <option disabled="disabled" selected="selected">職位</option>
+                  <option value="Male">學生</option>
+                  <option value="Women">教師</option>
+                </select>
+                <select
+                  class="form-control form-control-lg m-2 student-input"
+                  aria-label=".form-control-lg example"
                   name="gender"
                   style="color: #989898"
                 >
@@ -101,7 +112,7 @@
               </div>
               <button class="card-btn" id="register">註冊</button>
             </div>
-            <div id="alert" class="alert alert-warning d-none" role="alert">
+            <div id="alert" class="alert alert-danger d-none" role="alert">
               This is a warning alert—check it out!
             </div>
           </div>
