--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="./faceIdentify.html">亞洲大學圖書館</a>
           <i class="fas fa-home"></i>
@@ -56,7 +56,7 @@
               <div class="card-text video-wrap d-flex">
                 <video id="video" class="video"></video>
                 <img src="" />
-                <canvas id="canvas" class="canvas"></canvas>
+                <canvas id="canvas" class="canvas" width="1920px" height="1080px"></canvas>
               </div>
               <button id="snap" onclick="snap();" class="card-btn mt-1">拍照</button>
             </div>
