--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="./faceIdentify.html">亞洲大學圖書館</a>
           <i class="fas fa-home"></i>
