--- a/faceIdentify.html
+++ b/faceIdentify.html
@@ -54,7 +54,7 @@
               <div class="card-text video-wrap">
                 <video id="video" class="video"></video>
                 <img src="" />
-                <canvas id="canvas" class="canvas"></canvas>
+                <canvas id="canvas" class="canvas" width="640px" height="960px"></canvas>
               </div>
               <div id="camera_status" class="alert alert-warning" role="alert"></div>
               <div id="alert" class="alert alert-danger d-none" role="alert"></div>
