--- a/borrowBooks.html
+++ b/borrowBooks.html
@@ -56,7 +56,7 @@
               <div class="card-text video-wrap">
                 <video id="video" class="video"></video>
                 <img src="" />
-                <canvas id="canvas" class="canvas"></canvas>
+                <canvas id="canvas" class="canvas" width="640px" height="960px"></canvas>
               </div>
               <div id="camera_status" class="alert alert-warning d-none" role="alert"></div>
             </div>
@@ -97,6 +97,7 @@
                   aria-label=".form-control-lg example"
                   name="staff"
                   style="color: #989898"
+                  disabled="disabled"
                 >
                   <option disabled="disabled" selected="selected">職位</option>
                   <option value="Male">學生</option>
@@ -113,6 +114,7 @@
                   <option value="Male">男</option>
                   <option value="Women">女</option>
                 </select>
+                <button class="card-btn mt-2" id="close">關閉</button>
               </div>
               <div id="alert" class="alert alert-danger d-none" role="alert">
                 This is a warning alert—check it out!
