--- a/login.html
+++ b/login.html
@@ -87,6 +87,6 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <script src="./login.js"></script>
+    <script src=".js/login.js"></script>
   </body>
 </html>
