--- a/borrowBooks.html
+++ b/borrowBooks.html
@@ -133,6 +133,6 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <script src=".js/borrowBooks.js"></script>
+    <script src="/js/borrowBooks.js"></script>
   </body>
 </html>
