--- a/borrowBooks.html
+++ b/borrowBooks.html
@@ -114,6 +114,9 @@
                   <option value="Male">男</option>
                   <option value="Women">女</option>
                 </select>
+                <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="copyButton()">
+                  copy
+                </button>
               </div>
               <div id="alert" class="alert alert-danger d-none" role="alert">
                 This is a warning alert—check it out!
@@ -133,6 +136,6 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/borrowBooks.js"></script>
+    <script src="js/borrowBooks.js"></script>
   </body>
 </html>
