--- a/register.html
+++ b/register.html
@@ -96,8 +96,8 @@
                   style="color: #989898"
                 >
                   <option disabled="disabled" selected="selected">職位</option>
-                  <option value="Male">學生</option>
-                  <option value="Women">教師</option>
+                  <option value="studen">學生</option>
+                  <option value="teacher">教師</option>
                 </select>
                 <select
                   class="form-control form-control-lg m-2 student-input"
@@ -129,6 +129,6 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
