--- a/importData.html
+++ b/importData.html
@@ -11,7 +11,8 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/backstage.css" />
+    <link rel="stylesheet" href="./css/camera_from.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -29,21 +30,21 @@
     <header>
       <nav class="navbar navbar-expand navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./faceIdentify.html">亞洲大學圖書館後台管理系統</a>
+          <a class="navbar-brand title" href="./faceIdentify.html">亞洲大學圖書館後台管理系統</a>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="backstage.html">資料表</a>
+                <a class="nav-link" href="register.html">人臉註冊</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="faceIdentify.html">匯入資料</a>
+                <a class="nav-link" href="backstage.html">總覽</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./borrowBooks.html">刪除資料</a>
+                <a class="nav-link" href="importData.html">匯入資料</a>
               </li>
             </ul>
+            <a class="nav-btn" href="./faceIdentify.html">前台</a>
           </div>
-          <a class="login-btn" href="./login.html">登入</a>
         </div>
       </nav>
     </header>
@@ -136,8 +137,8 @@
                     <option value="Male">男</option>
                     <option value="Women">女</option>
                   </select>
-                  
                 </div>
+                <button class="card-btn" id="inser_data">新增資料</button>
               </div>
             </div>
             <!-- /.card -->
@@ -179,6 +180,11 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="container d-flex justify-content-center">
+          <p>Copyright © 2021 Asia University. All rights reserved. 亞洲大學圖書館</p>
+      </div>
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
